fix grid-gap bug

--- a/scss/utilities/_display.scss
+++ b/scss/utilities/_display.scss
@@ -29,4 +29,7 @@
   &-grid {
     display: grid;
   }
+  &-inline-grid {
+    display: inline-grid;
+  }
 }
